# atomspace

./: test.sh
examples/: CMakeLists.txt
examples/c++-api/: UREExample.cc
examples/reduct/: CMakeLists.txt  ReductExample.cc
examples/reduct/commutativity/: commutativity_rule.scm  reduct.scm  test.scm
examples/reduct/involution/: involution_alt.scm  involution_rule.scm  pm_test.scm  reduct.scm  test.scm
examples/reduct/test/: bug_1.scm  bug_1_test.scm  bug_2.scm  bug_3.scm  bug_4.scm  test1.scm  test2.scm  test4.scm
examples/rule-engine/involution/: involution_rule.scm  reduct.scm  test.scm
opencog/atoms/pattern/: BindLink.h  PatternUtils.cc  PatternUtils.h
opencog/query/: PatternMatch.cc
opencog/rule-engine/forwardchainer/: ForwardChainer.cc
tests/query/: ConstantClausesUTest.cxxtest
tests/rule-engine/backwardchainer/: CMakeLists.txt  bwchainerExample.cc  fc-unsatisfied-premise.scm
tests/rule-engine/forwardchainer/: ForwardChainerUTest.cxxtest  fc-unsatisfied-premise.scm
